--- a/itreporting/templates/itreporting/about.html
+++ b/itreporting/templates/itreporting/about.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Student IT Services - About</title>
-</head>
-
-<body>
-    <h1>About the App</h1>
-</body>
-
-</html>
+{% extends "itreporting/base.html" %}
+{% block content %}
+<h1>About</h1>
+{% endblock content %}
