--- a/itreporting/templates/itreporting/contact.html
+++ b/itreporting/templates/itreporting/contact.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Student IT Services - Contact</title>
-</head>
-
-<body>
-    <h1>Contact Us</h1>
-</body>
-
-</html>
+{% extends "itreporting/base.html" %}
+{% block content %}
+<h1>Contact</h1>
+{% endblock content %}
