--- a/itreporting/templates/itreporting/home.html
+++ b/itreporting/templates/itreporting/home.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
+{% extends "itreporting/base.html" %}
+{% block content %}
 
-<head>
-    <title>Student IT Services - Home</title>
-</head>
-
-<body>
-    <h1>Welcome to Student IT Services</h1>
-</body>
-
-</html>
+<h1>Welcome to Elysium</h1>
+{% endblock content %}
