--- a/itreporting/templates/itreporting/base.html
+++ b/itreporting/templates/itreporting/base.html
@@ -34,6 +34,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="{% url 'itreporting:request-create' %}">Create Request</a>
               <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
               <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
@@ -53,20 +54,6 @@
         {% endfor %}
         {% endif %}
         {% block content %}{% endblock %}
-      </div>
-      <div class="col-md-4">
-        <div class="content-section">
-          <h3>General Information</h3>
-          <p class='text-muted'>Lorem ipsum dolor sit amet, iudico docendi inciderint per eu, ea vis scripta senserit
-            periculis.
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Latest Issues Reported</li>
-            <li class="list-group-item list-group-item-light">IT Policies</li>
-            <li class="list-group-item list-group-item-light">IT Regulations</li>
-            <li class="list-group-item list-group-item-light">Upcoming Events</li>
-          </ul>
-          </p>
-        </div>
       </div>
     </div>
   </div>
